--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dependencies": {
         "@supabase/supabase-js": "^2.97.0"
     },
-    "pnpm": {
-        "neverBuiltDependencies": []
+    "engines": {
+        "node": ">=18"
     }
 }
