Reverted all changes back to version 97950c69925381b925c629d3aa4fbc60a6b635f1

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     },
     "dependencies": {
         "@supabase/supabase-js": "^2.97.0"
+    },
+    "engines": {
+        "node": ">=18"
     }
 }
